# php

./: .gitignore  AGENTS.md  CHANGELOG.md  CHANGELOG.ru.md  CHANGELOG.zh.md  CONTRIBUTING.md  CONTRIBUTING.ru.md  CONTRIBUTING.zh.md  Cargo.toml  LICENSE-APACHE  README.md  README.ru.md  README.zh.md  SECURITY.md  SECURITY.ru.md  SECURITY.zh.md  composer.json  kahlan-config.php
.github/workflows/: ci.yml  release.yml
crates/cabi/: Cargo.toml
crates/cabi/src/: lib.rs
examples/: basic.php
src/: Ktav.php  KtavException.php  NativeLib.php  NativeLoader.php  WireJson.php
tests/: ConformanceSpec.php  SmokeSpec.php  TestPaths.php
