[workspace]
resolver = "2"
members = ["crates/cabi"]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/ktav-lang/php"
rust-version = "1.70"

[workspace.dependencies]
ktav = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
indexmap = "2"

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
opt-level = 3
debug = false
overflow-checks = false
incremental = false
panic = "abort"
